<resources xmlns:tools="http://schemas.android.com/tools">

    <!--app info-->
    <string name="app_name">Epic Pocket Wallpapers</string>
    <string name="app_copyright">Copyright &#169; 2023 Epic Pocket Wallpapers \n All rights reserved</string>
    <string name="share_text">I Would like to share this with you. Here You Can Download This Application from PlayStore</string>

    <!--navigation name-->
    <string name="title_nav_home">Wallpapers</string>
    <string name="title_nav_category">Categories</string>
    <string name="title_nav_favorite">Favorites</string>

    <!--title tab menu and sort option-->
    <string name="menu_recent">Recent</string>
    <string name="menu_featured">Featured</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_random">Random</string>
    <string name="menu_live">Live Wallpaper</string>
    <string name="title_sort">Sort Wallpapers</string>

    <!--toolbar main menu-->
    <string name="menu_search">Search</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_more">More</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="menu_overflow_settings">Settings</string>
    <string name="menu_overflow_rate_us">Rate us</string>
    <string name="menu_overflow_more_apps">More apps</string>
    <string name="menu_overflow_share">Share</string>
    <string name="menu_overflow_about">About</string>
    <string name="submit_wallpaper">Submit Wallpaper</string>
    <string name="contact">Contact</string>

    <!--wallpaper and category aspect ratio-->
    <string name="wallpaper_image_ratio_rectangle">H,1:1.5</string>
    <string name="wallpaper_image_ratio_square">H,1:1</string>
    <string name="category_image_ratio">H,2:1</string>

    <!--set wallpaper option-->
    <string name="title_set_action_info">Info</string>
    <string name="title_set_action_save">Save</string>
    <string name="title_set_action_apply">Apply</string>
    <string name="title_set_action_favorite">Favorite</string>
    <string name="dialog_set_title">Set As : </string>
    <string name="set_home_screen">Home Screen</string>
    <string name="set_lock_screen">Lock Screen</string>
    <string name="set_both">Home &amp; Lock Screens</string>
    <string name="set_crop">Crop</string>
    <string name="set_with">Set With&#8230;</string>
    <string name="dialog_option_ok">OK</string>
    <string name="option_yes">Yes</string>
    <string name="dialog_option_cancel">Cancel</string>
    <string name="msg_apply_wallpaper">Applying wallpaper&#8230;</string>
    <string name="msg_preparing_wallpaper">Preparing wallpaper&#8230;</string>
    <string name="btn_set_wallpaper">SET WALLPAPER</string>
    <string name="msg_title_success">Congratulations</string>
    <string name="msg_success_applied">Wallpaper applied successfully</string>
    <string name="msg_success_saved">Wallpaper saved successfully</string>
    <string name="btn_done">Done</string>
    <string name="txt_title_info">Info</string>
    <string name="txt_info_name">Name</string>
    <string name="txt_info_category">Category</string>
    <string name="id">ID</string>
    <string name="submitted_by">Submitted By</string>
    <string name="credit_to">Credit To</string>
    <string name="txt_info_resolution">Resolution</string>
    <string name="txt_info_size">Size</string>
    <string name="txt_info_type">Type</string>
    <string name="txt_info_views">Views</string>
    <string name="txt_info_downloads">Downloads</string>
    <string name="txt_info_tags">Tags</string>

    <!--snack bar message-->
    <string name="snack_bar_failed">Wallpaper not set.</string>
    <string name="snack_bar_error">Failed! Please try again later.</string>
    <string name="snack_bar_saving">Saving wallpaper&#8230;</string>
    <string name="snack_bar_favorite_removed">Wallpaper removed from favorite</string>
    <string name="snack_bar_favorite_added">Wallpaper added to favorite</string>

    <!--network & error message-->
    <string name="whops">Whoops!</string>
    <string name="whops_video">Video Wallpaper Player</string>

    <string name="failed_title_text">Whoops!</string>
    <string name="failed_text">there is something problem with your network or the server is currently down, please try it again later.</string>
    <string name="no_category_found">It looks like there are no category available at this time</string>
    <string name="no_search_wallpaper_found">No wallpapers found! if you want to continue search, please try enter another keyword!</string>
    <string name="no_search_category_found">No category found! if you want to continue search, please try enter another keyword!</string>
    <string name="msg_no_item">It looks like there are no wallpapers available in this section.</string>
    <string name="msg_no_favorite">Your favorite list is empty because you do not add any news in the favorite menu.</string>
    <string name="msg_search_input">Please Insert Keyword</string>
    <string name="btn_retry">Retry</string>

    <!--search-->
    <string name="radio_button_wallpaper">Wallpaper</string>
    <string name="radio_button_category">Category</string>

    <!--redirect if app suspended-->
    <string name="redirect_title">New App Updates</string>
    <string name="redirect_message">This application has expired and is no longer used, press the button below to download and install the latest update of this application.</string>
    <string name="redirect_button">Download Update Now</string>
    <string name="redirect_error">Whoops! there is problem with the url, try again later</string>

    <!--settings and others-->
    <string name="menu_settings">Settings</string>
    <string name="msg_clear_cache">Are you sure want to clear cache?</string>
    <string name="title_setting_theme">Dark Theme</string>
    <string name="sub_title_setting_theme">Better for eyesight &amp; battery life</string>
    <string name="title_setting_display_wallpaper">Display Wallpaper</string>
    <string name="option_menu_wallpaper_2_columns">2 Columns</string>
    <string name="option_menu_wallpaper_3_columns">3 Columns</string>
    <string name="title_setting_notification">Notification</string>
    <string name="sub_title_setting_notification">Subscribe to receive wallpapers update</string>
    <string name="title_setting_clear_cache">Clear Cache</string>
    <string name="sub_setting_clear_cache_start">Free up</string>
    <string name="sub_setting_clear_cache_end">of space</string>
    <string name="title_setting_privacy">Privacy Policy</string>
    <string name="sub_title_setting_privacy">App Terms &amp; Policies</string>
    <string name="title_setting_copyright">Copyright Information</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="sub_title_setting_copyright">App Copyright Information</string>
    <string name="title_setting_about">About</string>
    <string name="sub_title_setting_about">App info  &amp; build version</string>
    <string name="msg_about_version">Version</string>
    <string name="msg_please_wait">Please Wait&#8230;</string>
    <string name="msg_clearing_cache">Clearing cache</string>
    <string name="msg_cache_cleared">cache has been cleared</string>
    <string name="title_setting_path">Wallpaper Saved To</string>
    <string name="wallpaper_count_text">Wallpapers</string>
    <string name="start_download">Image download started.</string>
    <string name="failed_download">Image download failed.</string>
    <string name="img_content_description">TODO</string>
    <string name="title_menu_browser">Open in Browser</string>
    <string name="msg_cancel_update">Update canceled</string>
    <string name="msg_success_update">Update success!</string>
    <string name="msg_failed_update">Update Failed!</string>

    <!--exit message-->
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="msg_dialog_exit">Thank you for using our application, please support us by giving your best review and rating on the Google Play Store or share it with your friends.</string>
    <string name="btn_rate_us">Rate Us</string>
    <string name="btn_share">Share</string>
    <string name="btn_quit">Quit</string>

    <string name="vpn_detected">VPN Detected!!</string>
    <string name="close_vpn">Close VPN and re-open the app to continue.</string>

    <string name="drop_down_item_free">Free</string>
    <string name="drop_down_item_premium">Premium</string>
    <string name="sunset_city">Sunset City</string>
    <string name="watch_a_short_add">Watch a short ad to download this wallpaper</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="watch_ad">Watch Ad</string>
    <string name="sick_of_ads">Sick of ads?</string>
    <string name="remove_ad">Remove all ads for only $1.99</string>
    <string name="remove_all_ads">Remove all ads</string>
    <string name="drop_down_item_buy">Buy</string>
    <string name="buy_premium_message">Unlock All\nPremium Wallpapers\nand Get Rid of All Ads!</string>
    <string name="btn_continue" tools:ignore="ExtraTranslation">Continue</string>

    <string name="buy_premium_bottom_message" tools:ignore="ExtraTranslation"> Dear users, thank you for subscribing to our products services. After subscribing, we will start the product service. If you wish to cancel, you must do so 24 hours before the expiry of the current subscription period. You can manage your subscriptions and turn off auto-renewal by going to your Account Settings in Google Play after purchase.</string>
    <string name="dialog_message_buy_premium">To apply this Premium wallpaper, please purchase access!</string>
    <string name="learn_more">Learn More</string>
    <string name="cancel">Cancel</string>
    <string name="feedback_suggestion">If you have any feedback or suggestions, you can email us at</string>
    <string name="email_admin">contactpocketapp@gmail.com</string>
    <string name="drop_down_item_all">All</string>
    <string name="premium_upgrade_purchased">Premium upgrade has been purchased.</string>
    <string name="premium_upgrade_restored">Premium upgrade has been restored.</string>
    <string name="video_wallpaper">Video</string>
    <string name="title_set_action_delete">Delete</string>
    <string name="wallpaper_deleted">Wallpaper deleted successfully</string>
    <string name="msg_no_item_video">Choose a video (mp4 format)\nFor best result, video should have\n9:16 aspect ratio.</string>
    <string name="iap_license_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAqzHByxnQBihURH9Jw+F0MXQy2llWtXKMCFey35m/Cn03/H0wMQgD+FiL1f+Ovm+bZSm15a7somTykY0P5bOY5ArSZvRYLwMu2Gqk97j8nMVSdg3hBFLqYJPIxOKQH0nn2zZ1tm9CO30hcCG0+0QmTdj0ooZhMzODhh1ah8+yBTg7S704jI+Mq6BtJfjGXl0w6cMg2XsYP9QAe0xOEmvEzNhJFYmpel9OHW8Byz/mHRa3G6tEOklxK1xL9geR8bXwm+pTJ42PFxaQIyEuKimvejTdQZ+9/BlJ+GT6IkQYbs2Qc6skyuTW0X1f4nApTYTiyZWkOSrAQMa4WTDnV59lhwIDAQAB</string>
    <string name="premium_upgrade_purchased_restart">Thank you for your purchase. To apply the changes, the application will need to restart.</string>
    <string name="billing_error">Unable to initialize billing. Please try again later.</string>
    <string name="thanks_for_purchase">Thank you for your purchase.</string>


</resources>