<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/bg_circle"
        android:contentDescription="@string/img_content_description"
        android:padding="10dp"
        android:src="@drawable/ic_check" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/msg_title_success"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/msg_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/msg_success_applied"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/lyt_please_wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_please_wait"
                android:textSize="16sp" />

            <ProgressBar
                android:layout_width="36dp"
                android:layout_height="36dp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_done"
            style="@style/MaterialButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="36dp"
            android:text="@string/btn_done"
            android:textStyle="bold"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>