<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/spinner_popup_background"
    android:padding="4dp">

    <TextView
        android:id="@+id/itemAll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_free"
        android:text="@string/drop_down_item_all"
        style="@style/FilterItem"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/itemFree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_free"
        android:text="@string/drop_down_item_free"
        style="@style/FilterItem"
        app:layout_constraintTop_toBottomOf="@id/itemAll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/itemPremium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/drop_down_item_premium"
        style="@style/FilterItem"
        app:layout_constraintTop_toBottomOf="@id/itemFree"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/itemBuy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/drop_down_item_buy"
        style="@style/ItemBuy"
        app:layout_constraintTop_toBottomOf="@id/itemPremium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
