<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black"
    tools:context=".VideoAd.VideoAd">


    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sunset_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/sunset_city"
        android:textColor="@color/color_white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/arrow"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/lifestyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/lifestyle"
        android:textColor="@color/color_white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/sunset_city"
        app:layout_constraintTop_toBottomOf="@+id/sunset_city" />


    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/icon_watch_ad"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/download_wallpaper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/watch_a_short_add"
        android:textColor="@color/color_light_primary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appIcon" />

    <TextView
        android:id="@+id/watch_ad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/watch_ad_background"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/watch_ad"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/download_wallpaper"
        app:layout_constraintStart_toStartOf="@+id/download_wallpaper"
        app:layout_constraintTop_toBottomOf="@+id/download_wallpaper" />

    <TextView
        android:id="@+id/sick_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/sick_of_ads"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/watch_ad" />


    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/remove_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/remove_ad"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sick_ad" />

    <TextView
        android:id="@+id/remove_all_ads"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/remove_ad_background"
        android:gravity="center"
        android:onClick="onPurchaseClicked"
        android:padding="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/remove_all_ads"
        android:textColor="@color/color_grey_soft"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/remove_ad"
        app:layout_constraintStart_toStartOf="@+id/remove_ad"
        app:layout_constraintTop_toBottomOf="@+id/remove_ad" />


    <LinearLayout
        android:id="@+id/viewPremium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/premium_background"
        android:gravity="left"
        android:padding="8dp"
        android:paddingStart="10dp"
        android:paddingEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgPremium"
            android:layout_width="15dp"
            android:layout_height="18dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/ad_vector" />

        <TextView
            android:id="@+id/btnPremium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/drop_down_item_premium"
            android:textColor="@color/color_white"
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>