<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_peekHeight="60dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/txt_title_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/txt_title_info"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/flag"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_flag_24"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"/>

        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:gravity="start"
                    android:text="@string/txt_info_name"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_wallpaper_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.65"
                    android:text=""
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:gravity="start"
                    android:text="@string/txt_info_category"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_category_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.65"
                    android:text=""
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:gravity="start"
                    android:text="@string/id"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.65"
                    android:text=""
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:gravity="start"
                    android:text="@string/submitted_by"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_submitted_by"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.65"
                    android:text=""
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:gravity="start"
                    android:text="@string/credit_to"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_credit_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.65"
                    android:text=""
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <include
            layout="@layout/include_row_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:id="@+id/lyt_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/txt_info_tags"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>